# pyTranscriber

./: .flake8  .gitignore  .gitmodules  main.py  pyproject.toml
pytranscriber/: __about__.py
pytranscriber/control/: ctr_autosub.py  thread_cancel_autosub.py  thread_exec_autosub.py
pytranscriber/gui/: data.py  help_dialogs.py  main.py
pytranscriber/model/: param_autosub.py
pytranscriber/util/: srtparser.py  util.py
