[tool.poetry]
name = "pytranscriber"
version = "1.6.0"
description = "pyTranscriber can be used to generate automatic transcription / automatic subtitles for audio/video files through a friendly graphical user interface."
authors = ["Raryel C. Souza <raryel.csouza@protonmail.com>", "yshalsager <ysh-alsager@hotmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
PyQt5 = "^5.15.7"
# AutoSub dependencies
# TODO add dependencies from submodule and remove these
requests = "^2.28.1"
google-api-python-client = "^2.52.0"
progressbar2 = "^4.0.0"
pysrt = "^1.1.2"

[tool.poetry.dev-dependencies]
pyinstaller = "^5.1"
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = '(pytranscriber\/.*$|\.pyi?$)'
exclude = '''
/(
    \.git
  | __pycache__
  | \.venv
)/
'''

[tool.isort]
profile = "black"