[tool.poetry]
name = "pytranscriber"
version = "1.6.0"
description = "pyTranscriber can be used to generate automatic transcription / automatic subtitles for audio/video files through a friendly graphical user interface."
authors = ["Raryel C. Souza <raryel.csouza@protonmail.com>", "yshalsager <ysh-alsager@hotmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
PyQt5 = "^5.15.7"
# AutoSub dependencies
requests = ">=2.3.0"
pysubs2 = ">=0.2.4"
progressbar2 = ">=3.34.3"
googletrans = ">=2.4.0"
wcwidth = ">=0.1.7"
google-cloud-speech = ">=1.3.1,<2.0.0"
websocket-client = ">=0.56.0"
fuzzywuzzy = ">=0.18.0"
python-Levenshtein = ">=0.12.0"
Send2Trash = ">=1.5.0"
python-docx = "^0.8.11"
auditok = "0.1.8"

[tool.poetry.dev-dependencies]
pyinstaller = "^5.1"
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = '(pytranscriber\/.*$|\.pyi?$)'
exclude = '''
/(
    \.git
  | __pycache__
  | \.venv
)/
'''

[tool.isort]
profile = "black"